--- a/frontend/src/layout/Checkout/styles.scss
+++ b/frontend/src/layout/Checkout/styles.scss
@@ -1,7 +1,7 @@
 .sn__checkout-container {
 	width: 100%;
 	padding: 0 15px;
-	
+
 	.sn__checkout-wrapper {
 		max-width: 1200px;
 		width: 100%;
@@ -17,10 +17,10 @@
 				font-size: 16px;
 			}
 		}
-		
+
 		.sn__checkout-header {
 			text-align: center;
-			
+
 			.sn__checkout-header-logo {
 				padding-top: 20px;
 				margin: 0px;
@@ -30,7 +30,6 @@
 					max-width: 200px;
 					display: inline-block;
 				}
-
 			}
 		}
 
@@ -38,15 +37,13 @@
 			margin: 20px 0px 40px;
 
 			.sn__checkout-resume-products {
-
 				.sn__checkout-resume-products-title {
 					font-size: 20px;
 				}
-	
+
 				.sn__checkout-resume-products-carousel {
-		
 				}
-		
+
 				.sn__checkout-resume-products-list {
 					margin: 10px 0px;
 					list-style: none;
@@ -55,12 +52,11 @@
 					justify-content: flex-start;
 					overflow: hidden;
 
-					
 					li ~ li {
 						margin-left: 20px;
 					}
 				}
-		
+
 				.sn__checkout-resume-products-list-product {
 					display: flex;
 					align-items: center;
@@ -68,7 +64,7 @@
 
 					.sn__checkout-resume-products-list-product-image {
 						margin: 0px 15px 0px 0px;
-	
+
 						img {
 							width: 100%;
 							max-width: 80px;
@@ -77,12 +73,12 @@
 							border-radius: 30px;
 						}
 					}
-			
+
 					.sn__checkout-resume-products-list-info {
 						color: #323232;
 
 						.title {
-							color: #000000;	
+							color: #000000;
 							font-size: 14px;
 
 							overflow: hidden;
@@ -90,23 +86,22 @@
 							max-width: 135px;
 							text-overflow: ellipsis;
 						}
-						
+
 						.quantity {
 							font-size: 14px;
 						}
-						
+
 						.price {
 							font-size: 14px;
 						}
 					}
 				}
-		
 			}
 
 			.sn__checkout-resume-payment {
 				width: 100%;
 				max-width: 210px;
-				background-color: #FF7D1A;
+				background-color: #ff7d1a;
 				color: #ffffff;
 				padding: 15px 15px;
 				border-radius: 30px;
@@ -129,21 +124,17 @@
 					align-items: center;
 					justify-content: space-between;
 				}
-
 			}
 		}
 
-
-
-
 		.sn__checkout-finalization {
 			width: 100%;
-			margin: 40px 0px 80px;
+			padding-bottom: 80px;
 
 			.sn__checkout-finalization-form {
 				width: 100%;
 				text-align: center;
-	
+
 				.sn__checkout-finalization-form-step {
 					display: inline-block;
 					vertical-align: top;
@@ -152,7 +143,7 @@
 					margin: 0px 2%;
 					padding: 25px;
 					border-radius: 30px;
-					border: 2px solid #FF7D1A;
+					border: 2px solid #ff7d1a;
 					background-color: #ffffff;
 					box-shadow: 4px 4px 0px 4px rgba(0, 0, 0, 0.8);
 
@@ -179,12 +170,12 @@
 						input[type="number"] {
 							border-radius: 30px;
 							padding: 8px 20px;
-							border: 1px solid #FF7D1A;
+							border: 1px solid #ff7d1a;
 							display: block;
 							width: 100%;
 
 							font-size: 16px;
-							line-height: 1.0;
+							line-height: 1;
 							background-color: #ffffff;
 
 							transition: 0.2s ease-in;
@@ -196,16 +187,16 @@
 								border: 1px solid #323232;
 							}
 						}
-						
+
 						select {
 							border-radius: 30px;
 							padding: 8px 20px;
-							border: 1px solid #FF7D1A;
+							border: 1px solid #ff7d1a;
 							display: block;
 							width: 100%;
 
 							font-size: 16px;
-							line-height: 1.0;
+							line-height: 1;
 							background-color: #ffffff;
 
 							transition: 0.2s ease-in;
@@ -224,7 +215,7 @@
 							width: 100%;
 							margin-top: 10px;
 							border-radius: 30px;
-							
+
 							font-size: 18px;
 							color: #ffffff;
 
@@ -244,22 +235,16 @@
 						}
 					}
 				}
-		
+
 				.sn__checkout-finalization-form-step.one-step {
-					
 				}
-		
+
 				.sn__checkout-finalization-form-step.two-step {
-		
 				}
-				
+
 				.sn__checkout-finalization-form-step.three-step {
-		
 				}
 			}
-
 		}
-
-
 	}
 }
